# hindsight-clients/go/model_admin_config_response.go
@@ -1,0 +1,159 @@
+/*
+Hindsight HTTP API
+
+HTTP API for Hindsight
+
+API version: 0.8.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package hindsight
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the AdminConfigResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &AdminConfigResponse{}
+
+// AdminConfigResponse Response model for the server-level (admin) configuration view.  Returns the resolved ``HindsightConfig`` as a flat dict keyed by Python field name. Credential fields (API keys, tokens, service-account keys, base URLs) are masked: present as ``\"***\"`` when set and ``None`` when unset, so an operator can see which credentials are configured without ever seeing their values.
+type AdminConfigResponse struct {
+	// Resolved server-level configuration (Python field names); credentials are redacted
+	Config map[string]interface{} `json:"config"`
+}
+
+type _AdminConfigResponse AdminConfigResponse
+
+// NewAdminConfigResponse instantiates a new AdminConfigResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewAdminConfigResponse(config map[string]interface{}) *AdminConfigResponse {
+	this := AdminConfigResponse{}
+	this.Config = config
+	return &this
+}
+
+// NewAdminConfigResponseWithDefaults instantiates a new AdminConfigResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewAdminConfigResponseWithDefaults() *AdminConfigResponse {
+	this := AdminConfigResponse{}
+	return &this
+}
+
+// GetConfig returns the Config field value
+func (o *AdminConfigResponse) GetConfig() map[string]interface{} {
+	if o == nil {
+		var ret map[string]interface{}
+		return ret
+	}
+
+	return o.Config
+}
+
+// GetConfigOk returns a tuple with the Config field value
+// and a boolean to check if the value has been set.
+func (o *AdminConfigResponse) GetConfigOk() (map[string]interface{}, bool) {
+	if o == nil {
+		return map[string]interface{}{}, false
+	}
+	return o.Config, true
+}
+
+// SetConfig sets field value
+func (o *AdminConfigResponse) SetConfig(v map[string]interface{}) {
+	o.Config = v
+}
+
+func (o AdminConfigResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o AdminConfigResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["config"] = o.Config
+	return toSerialize, nil
+}
+
+func (o *AdminConfigResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"config",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varAdminConfigResponse := _AdminConfigResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varAdminConfigResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = AdminConfigResponse(varAdminConfigResponse)
+
+	return err
+}
+
+type NullableAdminConfigResponse struct {
+	value *AdminConfigResponse
+	isSet bool
+}
+
+func (v NullableAdminConfigResponse) Get() *AdminConfigResponse {
+	return v.value
+}
+
+func (v *NullableAdminConfigResponse) Set(val *AdminConfigResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAdminConfigResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAdminConfigResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAdminConfigResponse(val *AdminConfigResponse) *NullableAdminConfigResponse {
+	return &NullableAdminConfigResponse{value: val, isSet: true}
+}
+
+func (v NullableAdminConfigResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAdminConfigResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
